--- a/mypf.css
+++ b/mypf.css
@@ -8,8 +8,8 @@
 
 .sidebar {
     background-color: rgb(145, 145, 145);
-   
-    width: 12vw;
+
+    width: 434px;
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
 }
@@ -24,9 +24,14 @@
     padding: 33px 0;
 }
 
+.sidebar nav li a{
+    text-decoration: none;
+    color: white;
+}
+
 .main {
-    /*background-color: yellow;*/
-    width: 90vw;
+    /* background-color: yellow; */
+    min-width: 90vw;
 }
 
 .container {
@@ -34,46 +39,60 @@
 }
 
 .infocontainer {
-   /* background-color: rgb(241, 9, 191); */
+    /* background-color: rgb(241, 9, 191); */
     height: 78vh;
-    width: 82vw;
-    margin: 140px auto;
+    max-width: 82vw;
+    max-width: 140px auto;
     display: flex;
     justify-content: space-around;
 }
+
 .devinfo {
     display: flex;
     justify-content: center;
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
 .hello {
     font-size: 65px;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
 .name {
     font-size: 50px;
     font-weight: bold;
     font-family: 'Fira Sans', sans-serif;
-    
+
 }
+
 .about {
     font-size: 40px;
-   
+
 }
 
 
 .devpic img {
-    width: 266px;
+    max-width: 266px;
 }
 
-.button {
+.buttons {
     margin-top: 34px;
-    
+
 }
 
 .buttons button {
     padding: 9px 14px;
     border-radius: 22px;
-    
+    color: white;
+    background-color: aqua;
+    font-weight: bold;
+    font-size: 21px;
+    margin: 0 3px;
+    cursor: pointer;
+}
+
+.buttons button:hover {
+    background-color: white;
+    color: aqua;
 }
