--- a/mypf.css
+++ b/mypf.css
@@ -76,12 +76,12 @@
     max-width: 266px;
 }
 
-.buttons {
+.btn {
     margin-top: 34px;
 
 }
 
-.buttons button {
+.btn {
     padding: 9px 14px;
     border-radius: 22px;
     color: white;
@@ -92,7 +92,48 @@
     cursor: pointer;
 }
 
-.buttons button:hover {
+.btn:hover {
     background-color: white;
     color: aqua;
+}
+
+.devpic img {
+    height: 58vh;
+}
+.contactform  {
+    font-family: 'Fira Sans', sans-serif;
+    padding: 0 34px;
+    padding-top: 144px;
+   
+}
+.contactform h1{
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 12px 0;
+}
+
+.contactform div {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+
+}
+.contactform div input {
+   width: 30vw;
+   border-radius: 5px;
+   margin: 6px 0 0 0;
+   padding: 3px;
+}
+#emailHelp {
+    font-size: 11px;
+    color: midnightblue;
+    margin: 0 5px;
+    padding: 3px 0 0 0;
+}
+#form-check  {
+    flex-direction: row;
+}
+
+#form-check input{
+    width: 24px;
+    margin: 3px 0;
 }
