--- a/mypf.css
+++ b/mypf.css
@@ -74,6 +74,7 @@
 
 .devpic img {
     max-width: 266px;
+    padding-top: 50px;
 }
 
 .btn {
@@ -146,11 +147,46 @@
     margin: 20px;
     font-family: 'Fira Sans', sans-serif;
 }
-.blogcontainer h1 {
+.h1 {
     font-family: 'Fira Sans', sans-serif;
     margin: 23px;
 }
 
-.blogitem p {
+.p {
     font-family: 'Source Sans Pro', monospace;
+}
+.intro h2 {
+    font-family: 'Fira Sans', sans-serif;
+    margin: 12px;
+}
+
+.intro p {
+    font-family: 'Source Sans Pro', monospace;
+    margin: 12px;
+}
+
+.skillcontainer {
+    padding: 12px;
+}
+.skillitem {
+    font-family: 'Source Sans Pro', monospace;
+    display: flex;
+    align-items: center;
+    font-weight: 900;
+}
+.skill{
+    
+    width: 200px;
+    height: 10px;
+    border: 2px solid black;
+    background-color: red;
+}
+@media (max-width: 1000px) {
+    *{
+        background-color: rgb(253, 124, 124);
+    }
+     .sidebar{
+        transform: translate(-443px, 0px);
+        position: absolute;
+     }
 }
