--- a/mypf.css
+++ b/mypf.css
@@ -9,7 +9,7 @@
 .sidebar {
     background-color: rgb(145, 145, 145);
 
-    width: 434px;
+    /* width: 434px; */
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
 }
@@ -181,12 +181,39 @@
     border: 2px solid black;
     background-color: red;
 }
+.hundered{
+    width: 265px;
+}
+.fifty{
+    width: 190px;
+
+}
+
+.t5{
+    width: 120px;
+}
+
+.sidebarGo{
+    transform: translate(-443px, 0px);
+    position: absolute;
+}
+.hamburger {
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    left: 10px;
+}
+.cross{
+    margin-left: 130px;
+
+}
+
 @media (max-width: 1000px) {
     *{
-        background-color: rgb(253, 124, 124);
+        /* background-color: rgb(253, 124, 124); */
     }
-     .sidebar{
+     /* .sidebar{
         transform: translate(-443px, 0px);
         position: absolute;
-     }
+     } */
 }
